--- a/grid-demo.html
+++ b/grid-demo.html
@@ -15,10 +15,15 @@
 <body>
     <h1>fabric-layers Grid Demo</h1>
     <div class="controls">
-        <button id="zoomIn">Zoom In</button>
-        <button id="zoomOut">Zoom Out</button>
+        <label style="margin-right:10px;">
+          Min Zoom: <input id="minZoomInput" type="number" step="0.01" value="0.05" style="width:70px;">
+        </label>
+        <label style="margin-right:10px;">
+          Max Zoom: <input id="maxZoomInput" type="number" step="0.01" value="20" style="width:70px;">
+        </label>
         <button id="resetView">Reset View</button>
         <span id="coordinates">X: 0, Y: 0</span>
+        <span id="zoomLevel" style="margin-left: 20px; font-family: monospace;">Zoom: 1.00x</span>
     </div>
     <div id="canvas-container"></div>
 
@@ -49,18 +54,35 @@
         }
 
         // UI controls
-        document.getElementById('zoomIn').onclick = function() {
-          map.canvas.setZoom(map.canvas.getZoom() * 1.2);
-        };
-        document.getElementById('zoomOut').onclick = function() {
-          map.canvas.setZoom(map.canvas.getZoom() / 1.2);
-        };
         document.getElementById('resetView').onclick = function() {
           if (typeof map.reset === 'function') map.reset();
         };
+        // Wire min/max zoom inputs
+        const minZoomInput = document.getElementById('minZoomInput');
+        const maxZoomInput = document.getElementById('maxZoomInput');
+        function updateZoomLimits() {
+          let min = parseFloat(minZoomInput.value);
+          let max = parseFloat(maxZoomInput.value);
+          if (isNaN(min) || min <= 0) min = 0.01;
+          if (isNaN(max) || max <= min) max = min + 0.01;
+          map.minZoom = min;
+          map.maxZoom = max;
+          // Clamp current zoom if needed
+          if (map.zoom < min) map.setZoom(min);
+          if (map.zoom > max) map.setZoom(max);
+        }
+        minZoomInput.addEventListener('change', updateZoomLimits);
+        maxZoomInput.addEventListener('change', updateZoomLimits);
+        // Set initial limits
+        updateZoomLimits();
 
         // Mouse coordinates display and event logging via eventemitter2
         const coords = document.getElementById('coordinates');
+        const zoomSpan = document.getElementById('zoomLevel');
+        function updateZoomDisplay() {
+          const zoom = map.zoom || 1;
+          zoomSpan.textContent = `Zoom: ${zoom.toFixed(2)}x`;
+        }
         map.on('mouse:move', function(e) {
           if (e && e.pointer) {
             coords.textContent = `X: ${e.pointer.x.toFixed(1)}, Y: ${e.pointer.y.toFixed(1)}`;
@@ -69,6 +91,11 @@
         map.on('mouse:out', function() {
           coords.textContent = 'X: -, Y: -';
         });
+        // Update zoom display on zoom events
+        // Listen for map updates to refresh zoom display
+        map.on('update', updateZoomDisplay);
+        // Initial display
+        updateZoomDisplay();
 
         // Log some events for demo
         map.on('mouse:down', function(e) {
