--- a/plane-demo.html
+++ b/plane-demo.html
@@ -3,16 +3,10 @@
 <head>
     <title>Fabric Layers React Demo</title>
     <style>
-        .canvas-container {
-            margin: 20px;
-            border: 1px solid #ccc;
-        }
-        .controls {
-            margin: 20px;
-        }
-        button {
-            margin-right: 10px;
-            padding: 8px 16px;
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
         }
     </style>
 </head>
@@ -26,80 +20,26 @@
     <!-- Load Fabric.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/5.3.1/fabric.min.js"></script>
 
+    <!-- Load Emotion -->
+    <script src="https://unpkg.com/@emotion/react@11/dist/emotion-react.umd.min.js"></script>
+    <script src="https://unpkg.com/@emotion/styled@11/dist/emotion-styled.umd.min.js"></script>
+
+    <!-- Load Fabric Layers -->
+    <script src="https://unpkg.com/fabric-layers@1.1.3/dist/umd/index.js"></script>
+
+    <!-- Load our demo component -->
+    <script src="dist/demo.js"></script>
+
     <!-- Load Babel for JSX support -->
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
     <!-- Our component -->
     <script type="text/babel">
-        // Simple demo component using plain Fabric.js without layers
-        function Demo() {
-            const canvasRef = React.useRef(null);
-            const [activeLayer, setActiveLayer] = React.useState(0);
-
-            const addRectangle = () => {
-                if (canvasRef.current) {
-                    const rect = new fabric.Rect({
-                        left: 100,
-                        top: 100,
-                        width: 50,
-                        height: 50,
-                        fill: 'red'
-                    });
-                    canvasRef.current.add(rect);
-                    canvasRef.current.renderAll();
-                }
-            };
-
-            const addCircle = () => {
-                if (canvasRef.current) {
-                    const circle = new fabric.Circle({
-                        left: 200,
-                        top: 100,
-                        radius: 30,
-                        fill: 'blue'
-                    });
-                    canvasRef.current.add(circle);
-                    canvasRef.current.renderAll();
-                }
-            };
-
-            const clearCanvas = () => {
-                if (canvasRef.current) {
-                    canvasRef.current.clear();
-                }
-            };
-
-            React.useEffect(() => {
-                // Initialize canvas
-                const canvas = new fabric.Canvas('canvas', {
-                    width: 600,
-                    height: 400,
-                    backgroundColor: '#f0f0f0'
-                });
-                
-                // Store reference
-                canvasRef.current = canvas;
-
-                return () => {
-                    canvas.dispose();
-                };
-            }, []);
-
-            return (
-                <div>
-                    <div className="controls">
-                        <button onClick={addRectangle}>Add Rectangle</button>
-                        <button onClick={addCircle}>Add Circle</button>
-                        <button onClick={clearCanvas}>Clear Canvas</button>
-                    </div>
-                    <canvas id="canvas"></canvas>
-                </div>
-            );
-        }
-
+        const { GridDemo } = FabricLayersReact;
+        
         // Render the app
         const root = ReactDOM.createRoot(document.getElementById('root'));
-        root.render(<Demo />);
+        root.render(<GridDemo />);
     </script>
 </body>
 </html>
